bin_PROGRAMS=string2url_test test_get test_log
string2url_test_SOURCES=string2url_test.c
string2url_test_CFLAGS=-I..
string2url_test_LDFLAGS=-lweb -L..

test_get_SOURCES=test_get.c
test_get_CFLAGS=-I..
test_get_LDFLAGS=-lweb -L..

test_log_SOURCES=test_log.c
test_log_CFLAGS=-I..
test_log_LDFLAGS=-lweb -L..